--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#365065</color>
     <color name="colorAccent">#5dbeb0</color>
 
-    <color name="gr_bckgr">#f5f5f5</color>
+    <color name="gr_bckgr">#e9e9e2</color>
     <color name="white">#ffffff</color>
     <color name="black">#000000</color>
     <color name="transparent">#00ffffff</color>
