--- a/app/src/main/res/layout/card_user_item.xml
+++ b/app/src/main/res/layout/card_user_item.xml
@@ -29,15 +29,14 @@
 
         <TextView
             android:id="@+id/name"
+            style="@style/NameUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:text="hello"
-            android:textColor="@color/colorPrimary"
-            android:textSize="20sp" />
+            android:text="hello" />
 
         <TextView
             android:id="@+id/score"
+            style="@style/SimpleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
