--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#5dbeb0</color>
 
     <color name="text_primary">@color/colorPrimary</color>
+    <color name="text_accent">@color/colorAccent</color>
     <color name="text_sub">#b0bec5</color>
     <color name="gr_bckgr">#e9e9e2</color>
     <color name="white">#ffffff</color>
