--- a/app/src/main/res/layout/activity_users.xml
+++ b/app/src/main/res/layout/activity_users.xml
@@ -23,7 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:paddingRight="8dp"
+                android:paddingRight="@dimen/padding_normal"
                 android:visibility="gone" />
         </android.support.v7.widget.Toolbar>
 
