--- a/app/src/main/res/layout/card_repo_item.xml
+++ b/app/src/main/res/layout/card_repo_item.xml
@@ -4,17 +4,17 @@
     android:id="@+id/cv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
+    android:layout_margin="@dimen/margin_card"
     app:cardBackgroundColor="@color/white"
-    app:cardElevation="2dp">
+    app:cardElevation="@dimen/elevation">
 
 
-        <TextView
-            android:layout_marginLeft="16dp"
-            android:id="@+id/name"
-            style="@style/NameUser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="hello" />
+    <TextView
+        android:id="@+id/name"
+        style="@style/NameUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_text_left"
+        android:text="hello" />
 
 </android.support.v7.widget.CardView>
