--- a/app/src/main/res/layout/card_user_item.xml
+++ b/app/src/main/res/layout/card_user_item.xml
@@ -4,26 +4,26 @@
     android:id="@+id/cv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
+    android:layout_margin="@dimen/margin_little"
     app:cardBackgroundColor="@color/white"
-    app:cardElevation="2dp">
+    app:cardElevation="@dimen/elevation">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:paddingBottom="6dp"
-        android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:paddingTop="6dp">
+        android:paddingBottom="@dimen/padding_normal"
+        android:paddingLeft="@dimen/padding_middle"
+        android:paddingRight="@dimen/padding_middle"
+        android:paddingTop="@dimen/padding_normal">
 
         <com.foxmount.gitfox.utils.CircularImageView
             android:id="@+id/avatar"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="@dimen/avatar_size"
+            android:layout_height="@dimen/avatar_size"
+            android:layout_marginBottom="@dimen/margin_middle"
+            android:layout_marginTop="@dimen/margin_middle"
             android:src="@drawable/c" />
 
 
@@ -39,7 +39,7 @@
             style="@style/SimpleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="@dimen/margin_little"
             android:text="10389" />
 
 
